Slight cleanups and make Extension an interface